Fixed z-index issue

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -91,18 +91,6 @@ body {
 
 // react select dropdown css
 
-.ant-react-select__menu {
-  z-index: 99999 !important;
-} 
-
-.ant-react-select__menu {
-  z-index: 999999999 !important;
-}
-
-.ant-react-select__menu-list {
-  z-index: 999999999 !important;
-}
-
 .ant-react-select__control {
   border: 1px solid $grey-600 !important;
   border-radius: 3px !important;
